# engram

./: .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  engram-v2-prompt.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  guide.md
scripts/: build_vector_index.py  calibrate.py  chat.py  compute_layout.py  create_concept_index.py  create_large_test_data.py  create_semantic_data.py  create_test_data.py  debug_ingestion.py  debug_retrieval.py  deploy_glm.sh  deploy_qwen.sh  generate_kb_summary.py  generate_mock_docs.py  improve_graph_quality.py  migrate_to_v5.py  review_duplicates.py  run_ingestion.py  seed_test_data.py  setup_rhel.sh  start_vllm.sh  test_api.py  test_graph_only.py  test_learning.py  test_reasoning.py  test_retrieval.py  test_two_phase.py  verify_vllm.sh
src/engram/: __init__.py  config.py
src/engram/api/: __init__.py  graph.py  graph_template.py  main.py  routes.py
src/engram/chunking/: __init__.py  semantic_chunker.py
src/engram/embeddings/: __init__.py  bge_service.py  vector_index.py
src/engram/evaluation/: __init__.py  evaluator.py  metrics.py  ragas_eval.py  runner.py
src/engram/graph/: __init__.py  config.py  deduplication.py  enrichment.py  metrics.py  models.py  resolver.py
src/engram/indexing/: __init__.py  kb_summary.py
src/engram/ingestion/: __init__.py  concept_extractor.py  list_extractor.py  llm_client.py  memory_extractor.py  parser.py  person_extractor.py  pipeline.py  prompts.py  relationship_extractor.py  unified_extractor.py
src/engram/learning/: __init__.py  consolidation.py  contradiction.py  feedback_handler.py  forgetting.py  hebbian.py  memory_strength.py  reflection.py
src/engram/models/: __init__.py  concept.py  document.py  episodic_memory.py  semantic_memory.py
src/engram/preprocessing/: __init__.py  chunker.py  content_context.py  list_enricher.py  list_parser.py  normalizer.py  russian.py  table_enricher.py  table_parser.py  thinking_stripper.py  transliteration.py
src/engram/prompts/: __init__.py  base.py
src/engram/query/: __init__.py  enrichment.py
src/engram/reasoning/: __init__.py  (+13 more)
test_docs/: docker.md  kubernetes.md
tests/: conftest.py  golden_queries.json
tests/unit/: test_api.py  test_concept_extractor.py  test_embeddings.py  test_episode_manager.py  test_hybrid_search.py  test_learning.py  test_models.py  test_parser.py  test_pipeline.py  test_re_reasoning.py  test_spreading_activation.py  test_synthesizer.py  test_thinking_stripper.py  test_two_phase.py
(+51 files in other folders)
