[project]
name = "engram"
version = "0.1.0"
description = "Cognitive-inspired knowledge system with dual memory architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "neo4j>=5.15.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "einops>=0.7.0",
    "tqdm>=4.66.0",
    "networkx>=3.0",
    "igraph>=0.11.0",
    "python-dotenv>=1.0.0",
    "pymorphy3>=2.0.0",
    "transformers>=4.40.0",  # For Jina Reranker v3
    # v3.3 additions
    "cyrtranslit>=1.0.0",  # Russian/Latin transliteration
    "natasha>=1.6.0",  # Russian NER for person extraction
    "setuptools>=69.0.0",  # Required for pkg_resources (natasha dependency)
    # Two-phase retrieval
    "chonkie[semantic]>=0.4.0",  # Semantic chunking for raw document retrieval
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-aiofiles>=23.2.0",
]
gpu = [
    "cugraph-cu12>=24.0.0",
    "cudf-cu12>=24.0.0",
]
bge = [
    "FlagEmbedding>=1.2.0",  # Alternative BGE reranker (set RERANKER_MODEL=BAAI/bge-reranker-v2-m3)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.hatch.build.targets.sdist]
include = ["src/engram"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "neo4j.*", "pymorphy3.*", "FlagEmbedding.*", "natasha.*", "cyrtranslit.*", "chonkie.*", "transformers.*"]
ignore_missing_imports = true

[tool.uv]
# GPU server: uv sync
# CPU server: uv sync --extra-index-url https://download.pytorch.org/whl/cpu
extra-index-url = ["https://pypi.nvidia.com"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
